@@ -4,6 +4,7 @@ Unreleased Version 2.3.0-pre
  * Feature: Add crop to selection action in the selection menu. Not any different to the resize canvas action, but there for discoverability.
  * Feature: Allow using stabilizer and smoothing with lasso select tool.
  * Fix: Don't remember interpolation mode on transform tool, since it's too easy to mess up art from having a stale mode set.
+ * Fix: Make mipmap usage in hardware renderer configurable, since it causes performance issues with some graphics cards or drivers. Defaults to off. Thanks Bluestrings and Sinamer for reporting.
 
 2025-10-18 Version 2.3.0-beta.4
  * Fix: Unpremultiply alpha values when exporting to animated WEBP so that partially transparent pixels come out looking correct.
